[gd_scene load_steps=4 format=3 uid="uid://dgms6s5c6847n"]

[ext_resource type="Script" path="res://Scenes/GameLoop/GameLoop.gd" id="1_7bs80"]
[ext_resource type="PackedScene" uid="uid://cc8qq8nuav8ol" path="res://Scenes/GameLoop/PauseMenu/PauseMenu.tscn" id="2_aaawu"]

[sub_resource type="LabelSettings" id="LabelSettings_a8msq"]
font_size = 40

[node name="GameLoop" type="Node2D"]
script = ExtResource("1_7bs80")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 308.0
offset_top = 52.0
offset_right = 787.0
offset_bottom = 248.0
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "[center]Game loop![/center]"

[node name="NewsLabel" type="Label" parent="."]
offset_left = 183.0
offset_top = 1532.0
offset_right = 856.0
offset_bottom = 1831.0
text = "News"
label_settings = SubResource("LabelSettings_a8msq")
autowrap_mode = 3

[node name="SugestaoACTA" type="Button" parent="."]
offset_left = 43.0
offset_top = 511.0
offset_right = 539.0
offset_bottom = 862.0
theme_override_font_sizes/font_size = 55

[node name="SugestaoBCTA" type="Button" parent="."]
offset_left = 575.0
offset_top = 508.0
offset_right = 1047.0
offset_bottom = 865.0
theme_override_font_sizes/font_size = 55

[node name="PauseCTA" type="Button" parent="."]
offset_left = 875.0
offset_top = 45.0
offset_right = 1049.0
offset_bottom = 126.0
theme_override_font_sizes/font_size = 35

[node name="PauseMenuOverlay" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="PauseMenuOverlay" instance=ExtResource("2_aaawu")]
process_mode = 3
visible = false

[connection signal="pressed" from="SugestaoACTA" to="." method="_on_vitoria_cta_pressed"]
[connection signal="pressed" from="SugestaoBCTA" to="." method="_on_derrota_cta_pressed"]
[connection signal="pressed" from="PauseCTA" to="." method="_on_pause_cta_pressed"]
[connection signal="paused" from="PauseMenuOverlay/PauseMenu" to="." method="_on_pause_menu_paused"]
[connection signal="resumed" from="PauseMenuOverlay/PauseMenu" to="." method="_on_pause_menu_resumed"]
